# gmtk_2025

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.txt  all_python_sources.txt  game.html  game.pyxapp  mouse.pyxres  pyproject.toml  requirements.txt  resize_image.py
game/: __main__.py  main.py
game/core/: cursor.py  effects.py  scene.py  timeline.py
game/entities/: mouse.py
game/levels/: last_level_loop_keys.py  level_base.py  level_big_button_fireworks.py  level_button_lock.py  level_chase.py  level_door_maze.py  level_final.py  level_first_room_button.py  level_flag_only.py  level_four_hold_lock.py  level_helper.py  level_keys_demo.py  level_one.py  level_pads.py  level_rooms_demo.py  level_secret_code.py  level_switch_lock.py
game/objects/: __init__.py  base.py  box.py  button.py  click_pad.py  door.py  flag.py  four_color_key_wall.py  ghost_wall.py  key_door.py  key_gate.py  key_wall.py  locked_wall.py  pickable.py  switch.py  toggle_switch.py
game/scenes/: gameplay.py  level_finished.py  level_select.py
