[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmtk-2025"
version = "0.1.0"
description = "GMTK 2025 Pyxel jam game"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "pyxel>=2.4.10",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "black>=24.3.0",
  "pre-commit>=3.6.0",
]
